Use simpler /raw/ urls for documents
Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/docs/guides/latest/backends/b2.md
+++ b/docs/guides/latest/backends/b2.md
@@ -72,7 +72,7 @@ spec:
 Create the `Repository` we have shown above using the following command,
 
 ```console
-$ kubectl apply -f https://raw.githubusercontent.com/appscode/stash/0.8.3/docs/examples/guides/v1beta1/backends/b2.yaml
+$ kubectl apply -f https://github.com/stashed/docs/raw/0.8.3/docs/examples/guides/v1beta1/backends/b2.yaml
 repository/b2-repo created
 ```
 
