Use params shortcode to inject version
ref: https://gohugo.io/content-management/shortcodes/#param

--- a/docs/guides/latest/backends/s3.md
+++ b/docs/guides/latest/backends/s3.md
@@ -89,7 +89,7 @@ spec:
 Create the `Repository` we have shown above using the following command,
 
 ```console
-$ kubectl apply -f https://github.com/stashed/docs/raw/{{ .Version }}/docs/examples/guides/latest/backends/s3.yaml
+$ kubectl apply -f https://github.com/stashed/docs/raw/{{< param "info.version" >}}/docs/examples/guides/latest/backends/s3.yaml
 repository/s3-repo created
 ```
 
