--- a/docs/guides/latest/backends/b2.md
+++ b/docs/guides/latest/backends/b2.md
@@ -72,7 +72,7 @@ spec:
 Create the `Repository` we have shown above using the following command,
 
 ```console
-$ kubectl apply -f https://github.com/stashed/docs/raw/{{ .Version }}/docs/examples/guides/latest/backends/b2.yaml
+$ kubectl apply -f https://github.com/stashed/docs/raw/{{< param "info.version" >}}/docs/examples/guides/latest/backends/b2.yaml
 repository/b2-repo created
 ```
 
