Fix broken doc + specify where Stash can create bucket automatically

--- a/docs/guides/latest/backends/b2.md
+++ b/docs/guides/latest/backends/b2.md
@@ -18,6 +18,8 @@ Stash supports Backblaze's [B2 Cloud Storage](https://www.backblaze.com/b2/cloud
 
 In order to use Backblaze B2 Cloud Storage as backend, you have to create a `Secret` and a `Repository` object pointing to the desired B2 bucket.
 
+>If the bucket does not exist yet and the credentials you have provided have the privilege to create bucket, it will be created automatically during the first backup. In this case, you have to make sure that the bucket name is unique across all B2 buckets.
+
 #### Create Storage Secret
 
 To configure storage secret for this backend, following secret keys are needed:
