--- a/docs/guides/latest/backends/s3.md
+++ b/docs/guides/latest/backends/s3.md
@@ -18,6 +18,8 @@ Stash supports AWS S3 or S3 compatible storage services like [Minio](https://min
 
 In order to use S3 or S3 compatible storage service as backend, you have to create a `Secret` and a `Repository` object pointing to the desired bucket.
 
+>If the bucket does not exist yet, Stash will create it automatically in the default region (`us-east-1`) during the first backup. In this case, you have to make sure that the bucket name is unique across all S3 buckets. Currently, it is not possible for Stash to create bucket in different region. You have to create the bucket in your desired region before using it in Stash.
+
 #### Create Storage Secret
 
 To configure storage secret for this backend, following secret keys are needed:
