Use actual file link in "kubectl apply -f"
Signed-off-by: hossainemruz <emruz@appscode.com>

--- a/docs/guides/v1alpha1/backends/b2.md
+++ b/docs/guides/v1alpha1/backends/b2.md
@@ -104,7 +104,7 @@ spec:
 Now, create the Restic we have configured above for `b2` backend,
 
 ```console
-$ kubectl apply -f ./docs/examples/backends/b2/b2-restic.yaml
+$ kubectl apply -f https://github.com/stashed/docs/raw/{{< param "info.version" >}}/docs/examples/backends/b2/b2-restic.yaml
 restic "b2-restic" created
 ```
 
