--- a/docs/guides/v1alpha1/backends/s3.md
+++ b/docs/guides/v1alpha1/backends/s3.md
@@ -107,7 +107,7 @@ spec:
 Now, create the Restic we have configured above for `s3` backend,
 
 ```console
-$ kubectl apply -f ./docs/examples/backends/s3/s3-restic.yaml
+$ kubectl apply -f https://github.com/stashed/docs/raw/{{< param "info.version" >}}/docs/examples/backends/s3/s3-restic.yaml
 restic "s3-restic" created
 ```
 
