--- a/docs/guides/latest/backends/s3.md
+++ b/docs/guides/latest/backends/s3.md
@@ -24,7 +24,7 @@ In order to use S3 or S3 compatible storage service as backend, you have to crea
 
 To configure storage secret for this backend, following secret keys are needed:
 
-|           Key           |    Type    |                                                                              Description                                                                               |
+| Key                     | Type       | Description                                                                                                                                                            |
 | ----------------------- | ---------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | `RESTIC_PASSWORD`       | `Required` | Password that will be used to encrypt the backup snapshots.                                                                                                            |
 | `AWS_ACCESS_KEY_ID`     | `Required` | AWS / Minio / Rook / DigitalOcean Spaces access key ID                                                                                                                 |
@@ -65,10 +65,11 @@ Now, you have to create a `Repository` crd. You have to provide the storage secr
 
 Following parameters are available for `S3` backend.
 
-|   Parameter   |    Type    |                                                                                                                                                           Description                                                                                                                                                            |
+| Parameter     | Type       | Description                                                                                                                                                                                                                                                                                                                      |
 | ------------- | ---------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | `s3.endpoint` | `Required` | For S3, use `s3.amazonaws.com`. If your bucket is in a different location, S3 server (s3.amazonaws.com) will redirect Stash to the correct endpoint. For DigitalOCean, use `nyc3.digitaloceanspaces.com` etc. depending on your bucket region. For S3-compatible other storage services like Minio / Rook use URL of the server. |
 | `s3.bucket`   | `Required` | Name of Bucket. If the bucket does not exist yet it will be created in the default location (`us-east-1` for S3). It is not possible at the moment for Stash to create a new bucket in a different location, so you need to create it using a different program.                                                                 |
+| `s3.region`   | `Optional` | Specify the region of your bucket.                                                                                                                                                                                                                                                                                               |
 | `s3.prefix`   | `Optional` | Path prefix inside the bucket where the backed up data will be stored.                                                                                                                                                                                                                                                           |
 
 Below, the YAML of a sample `Repository` crd that uses an `S3` bucket as a backend.
@@ -84,6 +85,7 @@ spec:
     s3:
       endpoint: s3.amazonaws.com # use server URL for s3 compatible other storage service
       bucket: stash-demo
+      region: us-west-1
       prefix: /backup/demo/deployment/stash-demo
     storageSecretName: s3-secret
 ```
