Add bash instead of console for better code highlight
Signed-off-by: Emruz Hossain <emruz@appscode.com>

--- a/docs/guides/latest/backends/b2.md
+++ b/docs/guides/latest/backends/b2.md
@@ -32,7 +32,7 @@ To configure storage secret for this backend, following secret keys are needed:
 
 Create storage secret as below,
 
-```console
+```bash
 $ echo -n 'changeit' > RESTIC_PASSWORD
 $ echo -n '<your-b2-account-id>' > B2_ACCOUNT_ID
 $ echo -n '<your-b2-account-key>' > B2_ACCOUNT_KEY
@@ -73,7 +73,7 @@ spec:
 
 Create the `Repository` we have shown above using the following command,
 
-```console
+```bash
 $ kubectl apply -f https://github.com/stashed/docs/raw/{{< param "info.version" >}}/docs/examples/guides/latest/backends/b2.yaml
 repository/b2-repo created
 ```
