--- a/docs/guides/v1alpha1/backends/b2.md
+++ b/docs/guides/v1alpha1/backends/b2.md
@@ -28,7 +28,7 @@ To configure storage secret for this backend, following secret keys are needed:
 
 Create storage secret as below,
 
-```console
+```bash
 $ echo -n 'changeit' > RESTIC_PASSWORD
 $ echo -n '<your-b2-account-id>' > B2_ACCOUNT_ID
 $ echo -n '<your-b2-account-key>' > B2_ACCOUNT_KEY
@@ -103,7 +103,7 @@ spec:
 
 Now, create the Restic we have configured above for `b2` backend,
 
-```console
+```bash
 $ kubectl apply -f https://github.com/stashed/docs/raw/{{< param "info.version" >}}/docs/examples/backends/b2/b2-restic.yaml
 restic "b2-restic" created
 ```
