--- a/docs/guides/v1alpha1/backends/s3.md
+++ b/docs/guides/v1alpha1/backends/s3.md
@@ -29,7 +29,7 @@ To configure storage secret for this backend, following secret keys are needed:
 
 Create storage secret as below,
 
-```console
+```bash
 $ echo -n 'changeit' > RESTIC_PASSWORD
 $ echo -n '<your-aws-access-key-id-here>' > AWS_ACCESS_KEY_ID
 $ echo -n '<your-aws-secret-access-key-here>' > AWS_SECRET_ACCESS_KEY
@@ -106,7 +106,7 @@ spec:
 
 Now, create the Restic we have configured above for `s3` backend,
 
-```console
+```bash
 $ kubectl apply -f https://github.com/stashed/docs/raw/{{< param "info.version" >}}/docs/examples/backends/s3/s3-restic.yaml
 restic "s3-restic" created
 ```
