Show scheme in endpoint for Minio Repository
Signed-off-by: Emruz Hossain <emruz@appscode.com>

--- a/docs/guides/latest/backends/s3.md
+++ b/docs/guides/latest/backends/s3.md
@@ -90,7 +90,24 @@ spec:
     storageSecretName: s3-secret
 ```
 
-Create the `Repository` we have shown above using the following command,
+For S3 compatible Minio and other storage services, specify the endpoint with connection scheme (`http`, or `https`),
+
+```yaml
+apiVersion: stash.appscode.com/v1alpha1
+kind: Repository
+metadata:
+  name: minio-repo
+  namespace: demo
+spec:
+  backend:
+    s3:
+      endpoint: https://my-minio-service.minio-namespace.svc
+      bucket: stash-demo
+      prefix: /backup/demo/deployment/stash-demo
+    storageSecretName: s3-secret
+```
+
+Create the `s3-repo` Repository we have shown above using the following command,
 
 ```bash
 $ kubectl apply -f https://github.com/stashed/docs/raw/{{< param "info.version" >}}/docs/examples/guides/latest/backends/s3.yaml
