Add warning for Minio backend credentials keys
Signed-off-by: Emruz Hossain <emruz@appscode.com>

--- a/docs/guides/latest/backends/s3.md
+++ b/docs/guides/latest/backends/s3.md
@@ -59,6 +59,8 @@ $ kubectl create secret generic -n demo minio-secret \
 secret/minio-secret created
 ```
 
+{{< notice type="warning" message="If you are using a Minio backend, make sure that you are using `AWS_ACCESS_KEY_ID` instead of `MINIO_ACCESS_KEY` and `AWS_SECRET_ACCESS_KEY` instead of `MINIO_SECRET_KEY`." >}}
+
 ### Create Repository
 
 Now, you have to create a `Repository` crd. You have to provide the storage secret that we have created earlier in `spec.backend.storageSecretName` field.
